--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,4 @@
 MONGODB_URL=mongodb+srv://yashrajoria:IFAuI0f4NErdUrGY@propertydb.bfoirej.mongodb.net/test
+CLOUDINARY_API_KEY=677268789398274
+CLOUDINARY_API_SECRET=Umm03hCgHdjr4t7z5e9QGNHWgtc
+CLOUDINARY_CLOUD_NAME=dtw3bd2xf
