--- a/clients/package.json
+++ b/clients/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "dev": "refine start",
-    "build": "refine build",
+    "build": "CI=false refine build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "refine": "refine"
